--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "proca-tweet",
+  "homepage": "/proca-tweet",
   "version": "0.1.0",
   "description": "widget to tweet to targets",
   "repository": "https://github.com/TechToThePeople/proca-tweet.git",
@@ -12,6 +13,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "dotenv": "^8.2.0",
+    "ipgeolocation": "^2.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
